# socials-backend

./: Cargo.toml
.github/workflows/: rust.yml
src/: config.rs  main.rs  routes.rs
src/routes/: bots.rs  social.rs  social_source.rs  tasks.rs
src/routes/bots/: query.rs
src/routes/social/: query.rs
